# digit-drawing-prediction

./: .gitignore  README.md  images.db  lenet.pth  pyproject.toml  sql_app.db
digit_recognition/: __main__.py
digit_recognition/app/: app.py  database.py  models.py
digit_recognition/classifier/: Untitled-1.py  classifier.py  cuda_check.py  example.ipynb  lenet.pth  load_mnist.py  notebook.ipynb  predict.py  test.py  train.py  train_classifier.py  transform_images.ipynb
digit_recognition/classifier/pretrained/: pretrained.py
digit_recognition/js/: draw.js  fabric.min.js
digit_recognition/templates/: layout.html
