[tool.poetry]
name = "digit-drawing-prediction"
version = "0.1.0"
description = ""
authors = ["jordanhoare <jordanhoare0@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
jupyter = "^1.0.0"
python-dotenv = "^0.19.2"
flake8 = "^4.0.1"
torch = "^1.10.1"
black = "^21.12b0"
gdown = "^4.2.0"
isort = "^5.10.1"
pydantic = "^1.9.0"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
dotenv-settings-handler = "^0.0.3"
httpie = "^2.6.0"
transformers = "^4.15.0"
SQLAlchemy = "^1.4.29"
Jinja2 = "^3.0.3"
sentencepiece = "^0.1.96"
protobuf = "^3.19.1"
numpy = "^1.22.0"
scipy = "^1.7.3"
torchvision = "^0.11.2"
matplotlib = "^3.5.1"
opencv-python = "^4.5.5"
opencv-python-headless = "^4.5.5"
torchaudio = "^0.10.1"
nvidia-pyindex = "^1.0.9"
setuptools = "^60.5.0"
pip = "^21.3.1"
wheel = "^0.37.1"
poethepoet = "^0.12.0"
sklearn = "^0.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "pip3 install torch==1.10.1+cu113 torchvision==0.11.2+cu113 torchaudio===0.10.1+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"
